--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   
   <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Ffarmsetu1588back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.9"></script>
   <script type="module" src="https://static.rocket.new/rocket-shot.js?v=0.0.1"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&callback=initMap"
+    async
+    defer
+  ></script>
   </head>
 
 <body>
